MO2-658 , MO2-703 : Global dropdown list with hover effect and 20px spacing : Fixed MO2-977 , MO2-999 : BUAT Bugs : Fixed

--- a/src/app/investment-account/sing-pass/sing-pass.component.scss
+++ b/src/app/investment-account/sing-pass/sing-pass.component.scss
@@ -12,7 +12,6 @@ app-sing-pass{
   .flex-row{
     &.flex-col-12{
       justify-content: center;
-      align-items: baseline;
     }
   }
   .autofill-logo {
@@ -32,6 +31,7 @@ app-sing-pass{
     font-weight: bold;
     color: #e57300;
     padding-right: 15px;
+    padding-bottom: 7px;
   }
   .autofill-estimation{
     display: none;
@@ -40,16 +40,20 @@ app-sing-pass{
   &.postlogin {
     box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2);
     margin-bottom: 0px;
+    @include max360{
+      padding: 10px 14px;
+    }
     .flex-row{
       &.flex-col-12{
         justify-content: space-evenly;
-        align-items: baseline;
       }
     }
     .autofill-text {
       font-size: 21px;
       padding: 0;
       justify-content: flex-start;
+      padding-right: 10px;
+      padding-bottom: 7px;
     }
     .autofill-logo {
       width: 107px;
